syntax = "proto3";
package booking;

option go_package = "Airlines-booking-gRPC-Protobuf/genfiles";

message Booking{
    int32 seatNumber = 1;
    string passengerName = 2;
}

message Passenger{
    string name = 1;
}

message Flight{
    string flightName = 1;
}

message JourneyPath{
    string source = 1;
    string destination = 2; 
}

service TicketService{
    rpc BookTicket(Passenger) returns (Booking){}
}

service Flightinfo{
   rpc ListFlights(JourneyPath) returns (stream Flight){}
}